--- a/Resources/Public/Scss/Theme/fonts.scss
+++ b/Resources/Public/Scss/Theme/fonts.scss
@@ -17,7 +17,7 @@
 @font-face {
     font-family: 'Allison';
     src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Allison-v7-latin-regular.woff2') format('woff2'),
-    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/allison-v7-latin-regular.woff') format('woff');
+    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Allison-v7-latin-regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-    font-family: 'duepuntozero_regular';
+    font-family: 'Duepuntozero_regular';
     src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Duepuntozero_regular.woff2') format('woff2'),
     url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Duepuntozero_regular.woff') format('woff');
     font-weight: normal;
