fix capitalization of font names

--- a/Resources/Public/Scss/Theme/fonts.scss
+++ b/Resources/Public/Scss/Theme/fonts.scss
@@ -16,8 +16,8 @@
 
 @font-face {
     font-family: 'Allison';
-    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Allison-v7-latin-regular.woff2') format('woff2'),
-    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Allison-v7-latin-regular.woff') format('woff');
+    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Allison-v7-Latin-Regular.woff2') format('woff2'),
+    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Allison-v7-Latin-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -39,9 +39,9 @@
 }
 
 @font-face {
-    font-family: 'Baby Brooklynn Regular';
-    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Babybrooklyn-Medium.woff2') format('woff2'),
-    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Babybrooklyn-Medium.woff') format('woff');
+    font-family: 'Baby Brooklyn Regular';
+    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Babybrooklyn-Regular-Medium.woff2') format('woff2'),
+    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Babybrooklyn-Regular-Medium.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -72,7 +72,7 @@
 
 @font-face {
     font-family: 'Duepuntozero_regular';
-    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Duepuntozero_regular.woff2') format('woff2'),
+    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Duepuntozero_Regular.woff2') format('woff2'),
     url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Duepuntozero_regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
@@ -144,8 +144,8 @@
 
 @font-face {
     font-family: 'Lobster';
-    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Lobster-regular.woff2') format('woff2'),
-    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Lobster-regular.woff') format('woff');
+    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Lobster-Regular.woff2') format('woff2'),
+    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Lobster-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -232,8 +232,8 @@
 
 @font-face {
     font-family: 'Train One';
-    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Train-one-regular.woff2') format('woff2'),
-    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Train-one-regular.woff') format('woff');
+    src: url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Train-One-Regular.woff2') format('woff2'),
+    url('../../../typo3conf/ext/sitepackage/Resources/Public/Fonts/Train-One-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
