--- a/Resources/Private/Partials/Calendarize/Date/Static.html
+++ b/Resources/Private/Partials/Calendarize/Date/Static.html
@@ -2,9 +2,9 @@
 
 <f:if condition="{index.startDate -> f:format.date(format: 'd.m.Y')} == {index.endDate -> f:format.date(format: 'd.m.Y')}">
 	<f:then></f:then>
-	<f:else>
+	<f:else><f:comment><!-- never output end date, only end time
 		- {index.endDate -> f:format.date(format: '{f:translate(key: \'dateFormat\')}')}
-	</f:else>
+		--></f:comment></f:else>
 </f:if>
 
 <f:if condition="{index.allDay}">
