[events single] set img maxw to 768

--- a/Resources/Private/Partials/Calendarize/Event/Detail.html
+++ b/Resources/Private/Partials/Calendarize/Event/Detail.html
@@ -43,7 +43,7 @@
                         <f:media file="{image}" />
                     </f:then>
                     <f:else>
-                        <f:image image="{image}" alt="" maxWidth="300" class="img-rounded"/>
+                        <f:image image="{image}" alt="Bild zu {event.title}" maxWidth="768" />
                     </f:else>
                 </f:if>
 			</f:for>
